--- a/package.json
+++ b/package.json
@@ -5,6 +5,13 @@
   "main": "gruntfile.js",
   "dependencies": {},
   "devDependencies": {
-    "grunt": "~0.4.1"
+    "grunt": "~0.4.1",
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-uglify": "~0.3.1",
+    "grunt-contrib-imagemin": "~0.5.0",
+    "grunt-contrib-sass": "~0.6.0",
+    "grunt-autoprefixer": "~0.6.4",
+    "grunt-contrib-cssmin": "~0.7.0",
+    "grunt-contrib-watch": "~0.5.3"
   }
 }
