--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-uglify": "~0.3.1",
     "grunt-contrib-imagemin": "~0.5.0",
-    "grunt-contrib-sass": "~0.6.0",
+    "grunt-contrib-sass": "~0.7.3",
     "grunt-autoprefixer": "~0.6.4",
     "grunt-contrib-cssmin": "~0.7.0",
-    "grunt-contrib-watch": "~0.5.3"
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-spell": "~0.2.1"
   }
 }
