--- a/.htaccess
+++ b/.htaccess
@@ -1,9 +1,9 @@
 # ------------------------------------------------------------------------------
 ## GENERIC RULES                                                              |
 # ------------------------------------------------------------------------------
-Options +FollowSymLinks -MultiViews
-RewriteEngine On
-RewriteBase /
+# Options +FollowSymLinks -MultiViews
+# RewriteEngine On
+# RewriteBase /
 
 # ------------------------------------------------------------------------------
 ## 404 ERROR                                                                  |
@@ -14,14 +14,14 @@ RewriteBase /
 ## URL REWRITES                                                               |
 # ------------------------------------------------------------------------------
 ## rewrite www.example.com -> example.com
-RewriteCond %{HTTPS} !=on
-RewriteCond %{HTTP_HOST} ^www\.(.+)$ [NC]
-RewriteRule ^ http://%1%{REQUEST_URI} [R=301,L]
+# RewriteCond %{HTTPS} !=on
+# RewriteCond %{HTTP_HOST} ^www\.(.+)$ [NC]
+# RewriteRule ^ http://%1%{REQUEST_URI} [R=301,L]
 ## remove file extension .html
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteCond %{REQUEST_FILENAME}.html -f
-RewriteRule ^(.+)$ $1.html [L,QSA]
+# RewriteCond %{REQUEST_FILENAME} !-f
+# RewriteCond %{REQUEST_FILENAME} !-d
+# RewriteCond %{REQUEST_FILENAME}.html -f
+# RewriteRule ^(.+)$ $1.html [L,QSA]
 ## redirect blog.html?title=something to article/something
 # RewriteRule ^article/([a-zA-Z0-9-]+)/?$ blog?title=$1 [L,QSA]
 
@@ -88,7 +88,7 @@ AddDefaultCharset utf-8
 # ------------------------------------------------------------------------------
 ## Expires headers                                                            |
 # ------------------------------------------------------------------------------
-# <IfModule mod_expires.c>
+<IfModule mod_expires.c>
 # 	ExpiresActive on
 # 	ExpiresDefault                                      "access plus 1 month"
 # 	# CSS
@@ -126,4 +126,4 @@ AddDefaultCharset utf-8
 # 	ExpiresByType application/x-font-ttf                "access plus 1 month"
 # 	ExpiresByType font/opentype                         "access plus 1 month"
 # 	ExpiresByType image/svg+xml                         "access plus 1 month"
-# </IfModule>
+</IfModule>
