--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "grunt": "~0.4.1",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-uglify": "~0.3.1",
-    "grunt-contrib-imagemin": "~0.5.0",
+    "jpegtran-bin": "0.2.0",
+    "grunt-contrib-imagemin": "~0.7.0",
     "grunt-contrib-sass": "~0.7.3",
     "grunt-autoprefixer": "~0.6.4",
     "grunt-contrib-cssmin": "~0.7.0",
