--- a/.htaccess
+++ b/.htaccess
@@ -88,6 +88,7 @@ AddDefaultCharset utf-8
 # ------------------------------------------------------------------------------
 ## Expires headers                                                            |
 # ------------------------------------------------------------------------------
+## Do not do until site is complete!!!
 <IfModule mod_expires.c>
 # 	ExpiresActive on
 # 	ExpiresDefault                                      "access plus 1 month"
