--- a/.htaccess
+++ b/.htaccess
@@ -3,7 +3,7 @@
 # ------------------------------------------------------------------------------
 # Options +FollowSymLinks -MultiViews
 # RewriteEngine On
-# RewriteBase /localhost-folder
+# RewriteBase /localhost-folder/
 
 ############# DO NOT FORGET TO CHANGE REWRITEBASE BEFORE UPLOADING #############
 
@@ -15,16 +15,18 @@
 # ------------------------------------------------------------------------------
 ## URL REWRITES                                                               |
 # ------------------------------------------------------------------------------
-## rewrite www.example.com -> example.com
+## rewrite: www.example.com -> example.com
 # RewriteCond %{HTTPS} !=on
 # RewriteCond %{HTTP_HOST} ^www\.(.+)$ [NC]
 # RewriteRule ^ http://%1%{REQUEST_URI} [R=301,L]
-## remove file extension .html
+
+## remove file extension: .html
 # RewriteCond %{REQUEST_FILENAME} !-f
 # RewriteCond %{REQUEST_FILENAME} !-d
 # RewriteCond %{REQUEST_FILENAME}.html -f
 # RewriteRule ^(.+)$ $1.html [L,QSA]
-## redirect blog.html?title=something to article/something
+
+## redirect: blog.html?title=something -> article/something
 # RewriteRule ^article/([a-zA-Z0-9-]+)/?$ blog?title=$1 [L,QSA]
 
 # ------------------------------------------------------------------------------
