--- a/.htaccess
+++ b/.htaccess
@@ -20,13 +20,13 @@
 # RewriteCond %{HTTP_HOST} ^www\.(.+)$ [NC]
 # RewriteRule ^ http://%1%{REQUEST_URI} [R=301,L]
 
-## remove file extension: .html
+## remove file extension: .php
 # RewriteCond %{REQUEST_FILENAME} !-f
 # RewriteCond %{REQUEST_FILENAME} !-d
-# RewriteCond %{REQUEST_FILENAME}.html -f
-# RewriteRule ^(.+)$ $1.html [L,QSA]
+# RewriteCond %{REQUEST_FILENAME}.php -f
+# RewriteRule ^(.+)$ $1.php [L,QSA]
 
-## rewrite: blog.html?title=something -> article/something
+## rewrite: blog.php?title=something -> article/something
 # RewriteRule ^article/([a-zA-Z0-9-]+)/?$ blog?title=$1 [L,QSA]
 
 # ------------------------------------------------------------------------------
