--- a/.htaccess
+++ b/.htaccess
@@ -26,7 +26,7 @@
 # RewriteCond %{REQUEST_FILENAME}.php -f
 # RewriteRule ^(.+)$ $1.php [L,QSA]
 
-## rewrite: blog.php?title=something -> article/something
+## rewrite: blog.php?title=some-article-title -> article/some-article-title
 # RewriteRule ^article/([a-zA-Z0-9-]+)/?$ blog?title=$1 [L,QSA]
 
 # ------------------------------------------------------------------------------
